fit for validator

--- a/html_basics/home.html
+++ b/html_basics/home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
-  <head> Apache Spark MLlib using Sparklyr <meta charset = "utf-8"/>  </head>
+<html lang="en">
+  <head><title>Apache Spark MLlib using Sparklyr </title>
+    <meta charset = "utf-8"/>
+  </head>
+
   <aside>
     <header>
       <h2> Index </h2> </header>
