--- a/html_basics/linearregression.html
+++ b/html_basics/linearregression.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head> Linear Regression using sparklyr<meta charset="utf-8"/></head>
-    <aside>
+<html lang="en">
+  <head>
+    <title>Linear Regression using sparklyr</title>
+    <meta charset="utf-8"/>
+  </head>
+    <nav>
       <h2> Index </h2>
         <ul>
           <li><a href="home.html"> Sparklyr </a></li>
@@ -10,10 +13,9 @@
           <li><a href="randomforest.html"> Random Forest Decision Tree </a></li>
           <li><a href="kmeans.html"> K-Means Clustering </a></li>
         </ul>
-    </aside>
-    
+    </nav>
+<body>
   <h1>Linear Regression</h1>
-  <body>
   <p>This will be an example of using Spark's linear regression model on the classic wine quality data set. The code will compare the output from sparklyr and the base R lm() function. This regression will try to predict wine quality based on its pH, alcohol, density, and wine type. </p>
 <pre>
 # Loading local data
