add lang & fix title

--- a/html_basics/kmeans.html
+++ b/html_basics/kmeans.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>K-Means Clustering using MLlib<meta charset="utf-8"/></head>
-  <h2> Index </h2>
-    <ul>
-      <li><a href="home.html"> Sparklyr </a></li>
-      <li><a href="linearregression.html"> Linear Regression </a></li>
-      <li><a href="logit.html"> Logistic Regression </a></li>
-      <li><a href="randomforest.html"> Random Forest Decision Tree </a></li>
-      <li><a href="kmeans.html"> K-Means Clustering </a></li>
-    </ul>
+<html lang="en">
+<head>
+  <title>K-Means Clustering using MLlib</title>
+    <meta charset="utf-8"/>
+</head>
+  <nav>
+      <h2> Index </h2>
+        <ul>
+          <li><a href="home.html"> Sparklyr </a></li>
+          <li><a href="linearregression.html"> Linear Regression </a></li>
+          <li><a href="logit.html"> Logistic Regression </a></li>
+          <li><a href="randomforest.html"> Random Forest Decision Tree </a></li>
+          <li><a href="kmeans.html"> K-Means Clustering </a></li>
+        </ul>
+  </nav>
 <body>
   <h1>K-Means Clustering</h1>
       <p>Now I will display how to create a k-means clustering algorithm using the same wine data set and the same response, and predictor variables.</p>
