--- a/html_basics/randomforest.html
+++ b/html_basics/randomforest.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>Random Forest Decision Trees Using Sparklyr<meta charset="utf-8"/></head>
+<html lang="en">
+<head>
+  <title>Random Forest Decision Trees Using Sparklyr</title>
+    <meta charset="utf-8"/>
+</head>
   <nav>
     <h2> Navigation </h2>
       <ul>
