--- a/css_for_styling/pie.html
+++ b/css_for_styling/pie.html
@@ -6,6 +6,12 @@
 <div>
   <h1> Granny's Lemon Meringue Pie </h1>
   <figure><img src="pie.png" alt="picture of pie" width=250px></figure>
+  <p>One 9-inch pie
+    <br> 30 Min - Prep time
+    <br> 10 Min - Cook time
+    <br> 40 Min - Total
+    <br> 8 Serving
+  </p>
 </div>
 
 <div>
