--- a/css_for_styling/pie.html
+++ b/css_for_styling/pie.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><title> Granny's Lemon Meringue Pie</title>
+    <head><title> Granny's Lemon Meringue Pie</title>
+  <link rel="stylesheet" type="text/css" href="recipe.css">
   <meta charset="utf-8"/></head>
-
+<body>
 <div>
   <h1> Granny's Lemon Meringue Pie </h1>
   <figure><img src="pie.png" alt="picture of pie" width=250px></figure>
@@ -72,4 +73,5 @@
 
     <br><br>- Jean-Luc Piccard </blockquote>
 </div>
+    </body>
 </html>
