--- a/css_for_styling/index.html
+++ b/css_for_styling/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><title> Granny's Pies</title>
-  <meta charset="utf-8"/></head>
+  <meta charset="utf-8"/>
+  <link rel="icon" href="pie_icon.gif" type="image/gif"/></head>
+  <body>
+    <h1> I hope you're hungry </h1>
 
-<
+
+
+    
+  </body>
+</html>
