--- a/css_for_styling/pie.html
+++ b/css_for_styling/pie.html
@@ -6,7 +6,7 @@
 <body>
 <div>
   <h1> Granny's Lemon Meringue Pie </h1>
-  <figure><img src="pie.png" alt="picture of pie" width=250px></figure>
+  <figure><img src="pie.jpg" alt="picture of pie" width=150px></figure>
   <p>One 9-inch pie
     <br> 30 Min - Prep time
     <br> 10 Min - Cook time
@@ -16,19 +16,19 @@
 </div>
 
 <div>
-  <h2>INGREDIENTS</h1>
+  <h2>INGREDIENTS</h2>
     <ul>
       <li> 1 cup white sugar </li>
-      <li> 2 tbsp all-purpose flour </li>
+      <li> 2 <abbr title="tablespoons">tbsp</abbr> all-purpose flour </li>
       <li> 3 tbsp cornstarch </li>
-      <li> 1/4 tsp salt </li>
+      <li> 1/4 <abbr title="teaspoon"> tsp </abbr> salt </li>
       <li> 1 1/2 cups water </li>
       <li> 2 lemons, juiced and zested </li>
-      <li> 2 tbsp butter </li>
+      <li> 2 <abbr title="tablespoons">tbsp</abbr> butter </li>
       <li> 4 egg yolks, beaten </li>
       <li> 4 egg whites </li>
       <li> 1 (9 inch) pie crust, baked </li>
-      <li> 6 tbsp white sugar </li>
+      <li> 6 <abbr = title="tablespoons"> tbsp </abbr> white sugar </li>
     </ul>
 </div>
 
@@ -55,7 +55,7 @@
         <li> <strong>Bake</strong>: Bake in a preheated oven for 10 minutes, or until meringue is golden brown. </li>
       </ol>
 
-    <p> This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you will find that this recipe is delicious and also easy to follow, it's a piece of cake pie! </p>
+    <p> This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you will find that this recipe is delicious and also easy to follow, it's a piece of <del>cake</del> <ins>pie</ins>! </p>
 </div>
 
 <div>
@@ -73,5 +73,18 @@
 
     <br><br>- Jean-Luc Piccard </blockquote>
 </div>
+<div>
+<h2>LINKS</h2>
+<p><a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a></p>
+<p><a href="index.html">Home</a></p>
+</div>
+
+<pre>Copyright © 2012 Granny's Pies
+    A Granny's Pies Production
+           All rights reserved</pre>
+<a href="
+http://validator.w3.org/check?uri=referer"><img src="w3c-html.png"/></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3"><img src="w3c-css.gif"/></a>
+
     </body>
 </html>
