--- a/css_for_styling/pie.html
+++ b/css_for_styling/pie.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Heading Width & Background-->
 <html lang="en">
     <head><title> Granny's Lemon Meringue Pie</title>
   <link rel="stylesheet" type="text/css" href="recipe.css">
@@ -6,7 +7,7 @@
 <body>
 <div>
   <h1> Granny's Lemon Meringue Pie </h1>
-  <figure><img src="pie.jpg" alt="picture of pie" width=150px></figure>
+  <figure><img src="pie.jpg" alt="picture of pie" width=150></figure>
   <p>One 9-inch pie
     <br> 30 Min - Prep time
     <br> 10 Min - Cook time
@@ -28,7 +29,7 @@
       <li> 4 egg yolks, beaten </li>
       <li> 4 egg whites </li>
       <li> 1 (9 inch) pie crust, baked </li>
-      <li> 6 <abbr = title="tablespoons"> tbsp </abbr> white sugar </li>
+      <li> 6 <abbr title="tablespoons"> tbsp </abbr> white sugar </li>
     </ul>
 </div>
 
@@ -83,8 +84,8 @@
     A Granny's Pies Production
            All rights reserved</pre>
 <a href="
-http://validator.w3.org/check?uri=referer"><img src="w3c-html.png"/></a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3"><img src="w3c-css.gif"/></a>
+http://validator.w3.org/check?uri=referer"><img src="w3c-html.png" alt="html validator"/></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3"><img src="w3c-css.gif" alt="css validator"/></a>
 
     </body>
 </html>
