--- a/css_for_styling/pie.html
+++ b/css_for_styling/pie.html
@@ -76,13 +76,19 @@
 </div>
 <div>
 <h2>LINKS</h2>
-<p><a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a></p>
-<p><a href="index.html">Home</a></p>
+<p>
+  <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a>
+</p>
+<p>
+  <a href="index.html">Home</a>
+</p>
 </div>
 
-<pre>Copyright © 2012 Granny's Pies
+<pre>
+  Copyright © 2012 Granny's Pies
     A Granny's Pies Production
-           All rights reserved</pre>
+           All rights reserved
+</pre>
 <a href="
 http://validator.w3.org/check?uri=referer"><img src="w3c-html.png" alt="html validator"/></a>
 <a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3"><img src="w3c-css.gif" alt="css validator"/></a>
